Added demo Anytime Phone

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Anytime.Mailbox.Renter.Portal/node_modules
 /Anytime.Mailbox.Renter.Portal/obj
 /Anytime.Mailbox.Renter.Portal/wwwroot/assets/bundles
+/Anytime.Phone/bin
+/Anytime.Phone/obj
